[TASK] #46 - add_special prices to backend variants

--- a/Resources/Private/Partials/Product/Price.html
+++ b/Resources/Private/Partials/Product/Price.html
@@ -16,8 +16,8 @@
                 <cart:format.currency><cart:product.bestSpecialPrice product="{product}"/></cart:format.currency>
             </span>
         </div>
-        <div>
-            <strong>(Sie sparen: <f:format.number><cart:product.bestSpecialPricePercentageDiscount product="{product}"/></f:format.number> %)</strong>
+        <div class="special_price_percentage_discount">
+            <strong>(Sie sparen: <span class="price"><f:format.number><cart:product.bestSpecialPricePercentageDiscount product="{product}"/></f:format.number></span> %)</strong>
         </div>
     </f:then>
     <f:else>
