--- a/Resources/Private/Templates/Product/Show.html
+++ b/Resources/Private/Templates/Product/Show.html
@@ -56,17 +56,7 @@
         </f:for>
     </f:if>
 
-    <f:if condition="{settings.cart.pid}">
-        <f:render partial="Product/CartForm" arguments="{product: product, pid: settings.cart.pid}"/>
-    </f:if>
-
-    <div id="product-price">
-        <f:render partial="Product/Price" arguments="{product: product, settings: settings}"></f:render>
-    </div>
-
-    <f:if condition="{product.basePriceMeasureUnit}">
-        <f:render partial="Product/BasePrice" arguments="{product: product, settings: settings}"></f:render>
-    </f:if>
+    <f:cObject typoscriptObjectPath="lib.cartProduct.showForm" />
 
     <f:if condition="{product.relatedProducts}">
         <ul>
