--- a/Resources/Private/Partials/Product/CartForm.html
+++ b/Resources/Private/Partials/Product/CartForm.html
@@ -4,7 +4,7 @@
     <div class="form-message"></div>
 
     <f:form pageUid="{pid}"
-            id="add-product-form"
+            class="add-product-form"
             extensionName="Cart" pluginName="Cart" controller="Cart" action="addProduct"
             method="post"
             additionalAttributes="{data-remote: '{settings.addToCartByAjax}'}">
