--- a/Resources/Private/Partials/Cart/ProductForm.html
+++ b/Resources/Private/Partials/Cart/ProductForm.html
@@ -12,7 +12,7 @@
         method="post">
     <div class="row">
         <div class="col-sm-12">
-            <table id="checkout-review-table" class="data-table table stack" style="width: 100%">
+            <table id="checkout-product-table" class="data-table table stack" style="width: 100%">
                 <colgroup>
                     <col span="2"/>
                     <col width="1"/>
