--- a/Resources/Private/Backend/V7/Partials/Order/Show/Address.html
+++ b/Resources/Private/Backend/V7/Partials/Order/Show/Address.html
@@ -6,7 +6,7 @@
         </f:if>
         {address.street}<br/>
         {address.zip} {address.city}<br/>
-        {address.country}
+        <f:translate key="tx_cart.settings.allowed_countries.{address.country}" default="{address.country}"/>
     </div>
     <br/>
     <div>
