[TASK] #58 - add main categoriy and canonical url for category detail views

--- a/Resources/Private/Templates/Product/Show.html
+++ b/Resources/Private/Templates/Product/Show.html
@@ -3,6 +3,8 @@
 <f:layout name="Default"/>
 
 <f:section name="main">
+    <cart:canonicalTag product="{product}" />
+
     <cart:format.nothing>
         <cart:titleTag>
             <f:format.htmlentitiesDecode>{product.title}</f:format.htmlentitiesDecode>
