[BUGFIX] #73 - change output of product variants sku to variants completeSku for products with variants in cart and order mail

--- a/Resources/Private/Backend/V6/Templates/Product/Show.html
+++ b/Resources/Private/Backend/V6/Templates/Product/Show.html
@@ -62,7 +62,7 @@
                 <tr class="db_list_normal">
                     <td style="text-align: right;">
                         <f:link.action controller="Variant" action="show" arguments="{variant : variant}">
-                            {variant.sku}
+                            {variant.completeSku}
                         </f:link.action>
                     </td>
                     <f:if condition="{product.beVariantAttribute1}">
