--- a/Resources/Private/Backend/V7/Partials/Order/Show/Cart.html
+++ b/Resources/Private/Backend/V7/Partials/Order/Show/Cart.html
@@ -1,49 +1,11 @@
 <table class="typo3-dblist table table-striped table-hover">
     <thead>
-    <tr class="t3-row-header">
-        <th width="100px">
-            <f:translate
-                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.sku"/>
-        </th>
-        <th width="300px">
-            <f:translate
-                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.title"/>
-        </th>
-        <th width="100px">
-            <f:translate
-                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.price"/>
-        </th>
-        <th width="100px">
-            <f:translate
-                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.discount"/>
-        </th>
-        <th width="100px">
-            <f:translate
-                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.count"/>
-        </th>
-        <th width="100px">
-            <f:translate
-                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.net"/>
-        </th>
-        <th width="100px">
-            <f:translate
-                    key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:tx_cart_domain_model_order_product.gross"/>
-        </th>
-        <f:for each="{orderItem.orderTotalTax}" as="orderTotalTax">
-            <td width="100px">
-                <f:translate key="LLL:EXT:cart/Resources/Private/Language/locallang.xlf:plugin.cart.product.tax"
-                             arguments="{0: orderTotalTax.orderTaxClass.name}"/>
-            </td>
-        </f:for>
-    </tr>
+    <f:render partial="Order/Show/CartTable/Header" arguments="{orderItem: orderItem}"/>
     </thead>
     <tbody>
-    <f:for each="{orderItem.products}" as="product">
-        <f:render partial="Order/Show/Product"
-                  arguments="{product: product, currencySign: orderItem.currency}"/>
-    </f:for>
+    <f:render partial="Order/Show/CartTable/Body" arguments="{orderItem: orderItem}"/>
     </tbody>
     <tfoot>
-    <f:render partial="Order/Show/Summary" arguments="{orderItem: orderItem}"/>
+    <f:render partial="Order/Show/CartTable/Footer" arguments="{orderItem: orderItem}"/>
     </tfoot>
 </table>
