--- a/Resources/Private/Backend/V8/Templates/Order/Show.html
+++ b/Resources/Private/Backend/V8/Templates/Order/Show.html
@@ -8,11 +8,11 @@
     <f:flashMessages/>
 
     <div style="padding-bottom: 20px;">
-        <f:render partial="Order/Show/Properties" arguments="{orderItem: orderItem}"/>
+        <f:render partial="Order/Show/Properties" arguments="{orderItem: orderItem, paymentStatusOptions:paymentStatusOptions, shippingStatusOptions:shippingStatusOptions}"/>
     </div>
 
     <div style="padding-bottom: 20px;">
-        <f:render partial="Order/Show/ServiceStatus" arguments="{orderItem: orderItem}"/>
+        <f:render partial="Order/Show/Address" arguments="{orderItem: orderItem}"/>
     </div>
 
     <div style="padding-bottom: 20px;">
