--- a/Resources/Private/Templates/Cart/SetPayment.html
+++ b/Resources/Private/Templates/Cart/SetPayment.html
@@ -1,3 +1,14 @@
 <f:render partial="Cart/OrderForm/ShippingMethod" arguments="{cart:cart, shippings:shippings}"/>
 <f:render partial="Cart/OrderForm/PaymentMethod" arguments="{cart:cart, payments:payments}"/>
-<f:render partial="Cart/OrderForm/Cart" arguments="{cart:cart}"/>
+
+<table id="checkout-review-table" class="data-table" style="width: 100%">
+    <colgroup>
+        <col/>
+        <col width="1"/>
+        <col width="1"/>
+        <col width="1"/>
+    </colgroup>
+    <tbody>
+    <f:render partial="Cart/OrderForm/Summary" arguments="{cart:cart}"/>
+    </tbody>
+</table>
