--- a/Resources/Private/Partials/Cart/OrderForm/TaxList.html
+++ b/Resources/Private/Partials/Cart/OrderForm/TaxList.html
@@ -9,7 +9,7 @@
         </td>
         <td class="text-right last">
             <span class="price">
-                <cart:format.currency>{tax}</cart:format.currency>
+                <cart:format.currency currencySign="{currencySign}">{tax}</cart:format.currency>
             </span>
         </td>
     </tr>
