--- a/Resources/Private/Partials/Cart/ProductForm.html
+++ b/Resources/Private/Partials/Cart/ProductForm.html
@@ -40,7 +40,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <f:render partial="Cart/ProductForm/ProductList" arguments="{products:cart.products}"/>
+                    <f:render partial="Cart/ProductForm/ProductList" arguments="{cart:cart, products:cart.products}"/>
                 </tbody>
             </table>
         </div>
