--- a/Resources/Private/Partials/Mail/TaxList.html
+++ b/Resources/Private/Partials/Mail/TaxList.html
@@ -9,7 +9,7 @@
         </td>
         <td style="text-align: right;">
             <span class="price">
-                <cart:format.currency>{tax}</cart:format.currency>
+                <cart:format.currency currencySign="{cart.currencySign}">{tax}</cart:format.currency>
             </span>
         </td>
     </tr>
