--- a/Resources/Private/Templates/Product/List.html
+++ b/Resources/Private/Templates/Product/List.html
@@ -82,7 +82,7 @@
                         </f:else>
                     </f:if>
                     <td>
-                        <f:render partial="Product/Price" arguments="{product: product, settings: settings}"></f:render>
+                        <f:render partial="Product/Price" arguments="{product: product, settings: settings, currencyTranslationData:currencyTranslationData}"></f:render>
                     </td>
                 </tr>
             </f:for>
