--- a/Resources/Private/Partials/Cart/OrderForm/PaymentMethod.html
+++ b/Resources/Private/Partials/Cart/OrderForm/PaymentMethod.html
@@ -25,7 +25,7 @@
                         </f:if>
                     </dt>
                     <dd>
-                        <cart:format.currency>{payment.gross}</cart:format.currency>
+                        <cart:format.currency currencySign="{cart.currencySign}">{payment.gross}</cart:format.currency>
                     </dd>
                 </f:for>
             </dl>
