--- a/Resources/Private/Partials/Mail/Summary.html
+++ b/Resources/Private/Partials/Mail/Summary.html
@@ -12,7 +12,7 @@
         </td>
         <td style="text-align: right;">
             <span class="price">
-                <cart:format.currency>{cart.net}</cart:format.currency>
+                <cart:format.currency currencySign="{cart.currencySign}">{cart.net}</cart:format.currency>
             </span>
         </td>
     </tr>
@@ -24,7 +24,7 @@
         </td>
         <td style="text-align: right;">
             <span class="price">
-                <cart:format.currency>{cart.gross}</cart:format.currency>
+                <cart:format.currency currencySign="{cart.currencySign}">{cart.gross}</cart:format.currency>
             </span>
         </td>
     </tr>
@@ -41,7 +41,7 @@
             </td>
             <td style="text-align: right;">
                 <span class="price">
-                    <cart:format.currency>{cart.discountNet}</cart:format.currency>
+                    <cart:format.currency currencySign="{cart.currencySign}">{cart.discountNet}</cart:format.currency>
                 </span>
             </td>
         </tr>
@@ -53,7 +53,7 @@
             </td>
             <td style="text-align: right;">
                 <span class="price">
-                    <cart:format.currency>{cart.discountGross}</cart:format.currency>
+                    <cart:format.currency currencySign="{cart.currencySign}">{cart.discountGross}</cart:format.currency>
                 </span>
             </td>
         </tr>
@@ -70,7 +70,7 @@
         </td>
         <td style="text-align: right;">
             <span class="price">
-                <cart:format.currency>{cart.serviceNet}</cart:format.currency>
+                <cart:format.currency currencySign="{cart.currencySign}">{cart.serviceNet}</cart:format.currency>
             </span>
         </td>
     </tr>
@@ -82,7 +82,7 @@
         </td>
         <td style="text-align: right;">
             <span class="price">
-                <cart:format.currency>{cart.serviceGross}</cart:format.currency>
+                <cart:format.currency currencySign="{cart.currencySign}">{cart.serviceGross}</cart:format.currency>
             </span>
         </td>
     </tr>
@@ -98,7 +98,7 @@
         </td>
         <td style="text-align: right;">
             <span class="price">
-                <cart:format.currency>{cart.totalNet}</cart:format.currency>
+                <cart:format.currency currencySign="{cart.currencySign}">{cart.totalNet}</cart:format.currency>
             </span>
         </td>
     </tr>
@@ -110,7 +110,7 @@
         </td>
         <td style="text-align: right;">
             <span class="price">
-                <cart:format.currency>{cart.totalGross}</cart:format.currency>
+                <cart:format.currency currencySign="{cart.currencySign}">{cart.totalGross}</cart:format.currency>
             </span>
         </td>
     </tr>
