--- a/Resources/Private/Templates/Cart/ShowCart.html
+++ b/Resources/Private/Templates/Cart/ShowCart.html
@@ -6,6 +6,14 @@
     <div class="col-sm-12 col-md-12 col-lg-12 form-columns">
         <f:if condition="{cart.products}">
             <f:then>
+                <f:render partial="Cart/CurrencyForm" arguments="{cart:cart}"/>
+            </f:then>
+        </f:if>
+    </div>
+
+    <div class="col-sm-12 col-md-12 col-lg-12 form-columns">
+        <f:if condition="{cart.products}">
+            <f:then>
                 <f:render partial="Cart/ProductForm" arguments="{cart:cart}"/>
 
                 <f:render partial="Cart/CouponForm" arguments="{cart:cart}"/>
